# otmidterm

./: Dockerfile  README.md  app.py  old_pyproject.toml  pyproject.toml
Evals/NonBranchRevs/: evaluation_results.csv  evaluation_results.txt  golden2.py  golden3.py  golden4.py  golden_dataset.csv  golden_dataset.py  ot_complete_evaluation.csv  ot_complete_evaluation_huggingface.csv  ot_dataset.json  ot_golden_dataset.csv  ot_golden_dataset_huggingface.csv  ot_test_dataset.csv
Real project/: Dockerfile  chains.py  database.py  document_loader.py  logger.py  main.py  omain.py  pyproject.toml  qdrant.py  queries.py  repository.py  requirements.txt  templates.py  tools.py  utils_openai.py
fine tuning project/: create_datasets.py  create_embedding.py  pyproject.toml  test_dataset.jsonl  training_dataset.jsonl  val_dataset.jsonl
old_data/: Tennis elbow graded exercise.html  testingset.json
