[project]
name = "hfmidtermmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.4.0",
    "beautifulsoup4>=4.13.3",
    "datasets>=3.3.2",
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.19",
    "langchain-community>=0.3.18",
    "langchain-core>=0.3.39",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.7",
    "langchain-text-splitters>=0.3.6",
    "lxml>=5.3.1",
    "nest-asyncio>=1.6.0",
    "nltk==3.9.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "pymupdf>=1.25.3",
    "pypdf>=5.3.0",
    "python-pptx==1.0.2",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.7",
]
